# python-fitparse

./: Jenkinsfile  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: main.yml  publish.yml  tag-versions.yml  test.yml  update-sdk.yml
fitparse/: profile.py
patches/message_types/: stress_level.py
scripts/: generate_profile.py
tests/: test_generate_profile.py  test_profile_patches.py
